Added styling to achieve the desired outcome on big and smaller devices

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -4,16 +4,27 @@ body {
   min-height: 100vh;
 }
 
+.header, 
+.footer {
+  display: flex;
+  align-items: center;
+}
+
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+
+  font-weight: 800;
+  font-size: 32px;
+  padding-left: 1rem;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  justify-content: center;
 }
 
 .sidebar {
@@ -26,4 +37,35 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  max-width: 400px;
+  height: 300px;
+}
+
+.container {
+  display: flex;
+  flex: 3;
+  flex-wrap: wrap;
+  gap: 2rem;
+  padding: 2rem;
+}
+
+.main {
+  display: flex;
+  flex: 1;
+}
+
+.sidebar {
+  padding: 1rem;
+}
+
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.sidebar a {
+  text-decoration: none;
+  color: hsl(0, 100%, 100%);
+  font-size: 20px;
 }
